# BackEndTest

./: .gitignore  README.txt
C#-Asp.Net/: C#-Asp.Net.csproj  C#-Asp.Net.http  C#-Asp.Net.sln
C#-Asp.Net/Controllers/: ShoesController.cs
C#-Asp.Net/Models/: Shoe.cs
C#-Asp.Net/Properties/: launchSettings.json
C#-Asp.Net/Repositories/: IShoesCollection.cs  MongoDbRepo.cs  ShoesCollection.cs
Django-Python/: Pipfile  manage.py
Django-Python/api/: settings.py
Django-Python/api/api/: settings.py
Express-Node/src/: app.js
Express-Node/src/controllers/: shoes.controller.js
Express-Node/src/models/: shoe.model.js
Express-Node/src/routes/: shoes.routes.js
Fiber-Go/controllers/: shoesController.go
Fiber-Go/database/: db.go
Flask-Python/src/repositories/: ShoesRepository.py
Flask-Python/src/routes/: ShoesRoutes.py
Go-Fiber/: go.mod  main.go
Go-Fiber/database/: db.go
Go-Fiber/models/: shoeModels.go
Java-Spring/: pom.xml
JavaScript-Express/: package-lock.json  package.json
JavaScript-Express/src/: app.js
JavaScript-Nest/: package-lock.json  package.json
JavaScript-Nest/src/: app.module.ts
JavaScript-Nest/src/shoes/: shoes.controller.ts  shoes.module.ts  shoes.service.ts
Python-Django/: shoes_repo.py
Python-Django/api/: urls.py
Python-Django/shoes_api/: urls.py  views.py
Python-Flask/src/: app.py
Python-Flask/src/controllers/: ShoesController.py
Rocket-Rust/: Cargo.toml
Rocket-Rust/src/: main.rs
Rocket-Rust/src/models/: mod.rs
Rocket-Rust/src/repositories/: mongodb_repo.rs
Rust-Rocket/: Cargo.toml
Spring-Java/: pom.xml
(+16 files in other folders)
